--- a/public/index.html
+++ b/public/index.html
@@ -23,19 +23,15 @@
   <!-- ANGULAR CUSTOM -->
   <script src="js/app.js"></script>
 
-  <script src="js/services/AuthService.js"></script>
-  <script src="js/services/TopicService.js"></script>
+  <script src="js/services/spotinderService.js"></script>
 
 
   <script src="js/controllers/HomeController_test.js"></script>
-  <script src="js/controllers/HomeController.js"></script>
-  <script src="js/controllers/LoginController.js"></script>
+  <script src="js/controllers/userController.js"></script>
   <script src="js/controllers/MainController.js"></script>
-  <script src="js/controllers/SignupController.js"></script>
-  <script src="js/controllers/TopicController.js"></script>
 
 </head>
-<body ng-app="wikiLab" ng-controller="MainController">
+<body ng-app="wikilab" ng-controller="MainController">
 
   <!-- HEADER -->
   <header id="section-header" class="container-body">
